[package]
name = "docs-test-gen"
authors = ["Aumetra Weisman <aumetra@cryptolab.net>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
comrak = { version = "0.27.0", default-features = false }
glob = "0.3.1"
phf = { version = "0.11.2", features = ["macros"] }
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
sylvia = { version = "2.0.0-rc.1", features = ["cosmwasm_3_0"] }
cw2 = "3.0.0-rc.0"
cw-storage-plus = { version = "3.0.0-rc.2", features = ["macro"] }
cw-utils = "3.0.0-rc.0"
cosmwasm-schema = "3.0.0-rc.0"
cosmwasm-std = { version = "3.0.0-rc.0", features = [
  "stargate",
  "staking",
  "cosmwasm_3_0",
  "ibc2"
] }
sha2 = "0.10.8"
cosmos-sdk-proto = { version = "0.24.0", default-features = false } # Used in IBC code
ibc = "0.54.0" # Used in IBC code
serde = "*"
schemars = "0.8.21" # Used in entrypoint example
thiserror = "1.0.65"
cw-storey = "0.7.0-rc.0"
storey = "0.5.0"
