[package]
name = "link-inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
comrak = { version = "0.26.0", default-features = false }
glob = "0.3.1"
phf = { version = "0.11.2", features = ["macros"] }
ureq = { version = "2.10.0", default-features = false, features = ["tls"] }
url = "2.5.2"
